cmake_minimum_required(VERSION 2.8)
project(cpw)

if(APPLE)
    find_library(APPKIT AppKit)
    if (NOT APPKIT)
        message(FATAL_ERROR "AppKit not found")
    endif()
    set(PLATFORM_SRC platform_macos.m)
    set(PLATFORM_LIBS objc ${APPKIT})
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(PLATFORM_SRC platform_linux.c)
    set(PLATFORM_LIBS X11 Xmu)
elseif(WIN32)
    set(PLATFORM_SRC platform_win32.c)
else()
    message(FATAL_ERROR "Unsupported platform")
endif()

add_executable(${PROJECT_NAME} cpw.c platform.h ${PLATFORM_SRC})
target_link_libraries(${PROJECT_NAME} ${PLATFORM_LIBS})
